--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha"
   },
   "bin": {
-    "entinker-generator": "index.js"
+    "entinker-generator-v2": "index.js"
   },
   "preferGlobal": true,
   "keywords": [
